Simple-Designs/Combinational/Arithmetic/Multiplexer/vitis_hls.log
INFO: [HLS 200-10] Running 'C:/Xilinx/Vitis_HLS/2023.2/bin/unwrapped/win64.o/vitis_hls.exe'
INFO: [HLS 200-10] For user 'kwokt' on host 'billy' (Windows NT_amd64 version 6.2) on Mon May 06 04:16:19 -0400 2024
INFO: [HLS 200-10] In directory 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer'
INFO: [HLS 200-2053] The vitis_hls executable is being deprecated. Consider using vitis-run --mode hls --tcl
Sourcing Tcl script 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/2to1mux/solution1/cosim.tcl'
INFO: [HLS 200-1510] Running: source C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/2to1mux/solution1/cosim.tcl
INFO: [HLS 200-1510] Running: open_project 2to1mux 
INFO: [HLS 200-10] Opening project 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/2to1mux'.
INFO: [HLS 200-1510] Running: set_top mux 
INFO: [HLS 200-1510] Running: add_files mux.cpp 
INFO: [HLS 200-10] Adding design file 'mux.cpp' to the project
INFO: [HLS 200-1510] Running: add_files mux.hpp 
INFO: [HLS 200-10] Adding design file 'mux.hpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb tb_mux.cpp 
INFO: [HLS 200-10] Adding test bench file 'tb_mux.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/2to1mux/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xcvu11p-flga2577-1-e'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2023.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1464] Running solution command: config_cosim -tool=xsim
INFO: [HLS 200-1510] Running: set_part xcvu11p-flga2577-1-e 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1510] Running: config_cosim -tool xsim 
INFO: [HLS 200-1510] Running: cosim_design 
INFO: [COSIM 212-47] Using XSIM for RTL simulation.
INFO: [COSIM 212-14] Instrumenting C test bench ...
   Build using "C:/Xilinx/Vitis_HLS/2023.2/tps/win64/msys64/mingw64/bin/g++"
   Compiling tb_mux.cpp_pre.cpp.tb.cpp
cosim.tv.mk:77: recipe for target 'obj/tb_mux.cpp_pre.cpp.tb.o' failed
In file included from C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/tb_mux.cpp:2:0:
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/mux.hpp:8:8: error: expected unqualified-id before string constant
In file included from C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/tb_mux.cpp:2:0:
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/mux.hpp:5:1: error: 'T' does not name a type
 T mux(T data0, T data1, bool select);
 ^
make: *** [obj/tb_mux.cpp_pre.cpp.tb.o] Error 1
ERROR: [COSIM 212-317] C++ compile error.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-331] Aborting co-simulation: C simulation failed, compilation errors.
ERROR: [COSIM 212-5] *** C/RTL co-simulation file generation failed. ***
ERROR: [COSIM 212-4] *** C/RTL co-simulation finished: FAIL ***
INFO: [HLS 200-111] Finished Command cosim_design CPU user time: 0 seconds. CPU system time: 0 seconds. Elapsed time: 1.838 seconds; current allocated memory: 5.223 MB.
command 'ap_source' returned error code
    while executing
"source C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/2to1mux/solution1/cosim.tcl"
    invoked from within
"hls::main C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/Multiplexer/2to1mux/solution1/cosim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 2 seconds. Total CPU system time: 1 seconds. Total elapsed time: 4.681 seconds; peak allocated memory: 198.816 MB.
